Home Page : Add new home page sections and update styles
Introduces Sections 6-11 to the home page, including specialisations, about, features, testimonials, appointment, and FAQ sections. Updates various components for improved styling, font usage, and layout consistency. Adds a ScrollToTop component, new images, and refines the navigation bar and footer. Also includes new and updated CSS for enhanced appearance.

--- a/app/components/home/Section4.css
+++ b/app/components/home/Section4.css
@@ -20,7 +20,7 @@
 .section4-title-main {
     text-align: center;
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: 800;
     color: #0B62A1;
     margin-bottom: 1.5rem;
     font-family: 'Urbanist', sans-serif;
@@ -36,7 +36,7 @@
 
 @media (min-width: 768px) {
     .section4-title-main {
-        font-size: 2.5rem;
+        font-size: 40px;
         margin-bottom: 3rem;
         padding: 0;
     }
