fix : delopyment error

--- a/src/components/features/2d-3d-ultrasound/Section5.module.css
+++ b/src/components/features/2d-3d-ultrasound/Section5.module.css
@@ -94,7 +94,7 @@
 
 .bookingRight {
     flex: 1;
-    background-image: url('/images/2d&3d_ultrasound/section5/section5.avif');
+    background-image: url('/images/2d-3d-ultrasound/section5/section5.avif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
