--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-urbanist);
-  --font-secondary: var(--font-dm-sans);
+  --font-sans: var(--font-sans);
+  --font-secondary: var(--font-secondary);
   --font-dancing-script: var(--font-dancing-script);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
