--- a/src/components/features/tmt/Section6.module.css
+++ b/src/components/features/tmt/Section6.module.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 .faqSection{
     background-color: #FFFFFF;
@@ -10,7 +9,7 @@
 
 
 .faqTitle{
-font-family: Inter;
+font-family: var(--font-sans);
 font-weight: 600;
 font-style: Bold;
 font-size: 48.2px;
